test/compile_error/invalidrange.conf.1.def
config invalid_range_conf {
	optional foo : int[~];
}
